--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.6.1",
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.7",
+    "cypress": "^3.8.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "rimraf": "^2.6.2",
